--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Fri Oct 26 14:05:03 2018</p>
+         Last Run: Fri Oct 26 15:05:03 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Team Dinner - Watson's</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Saturday Oct 27, 2018 -  4:00PM til  8:00PM</H4>
                <table class="table table-striped">
@@ -38,7 +38,7 @@
                         <td>1</td>
                         <td>23</td>
                         <td>WNW</td>
-                        <td>2</td>
+                        <td>1</td>
                      </tr>
                      <tr>
                         <td>05:00 PM</td>
@@ -46,19 +46,19 @@
                         <td>9</td>
                         <td>9</td>
                         <td>0</td>
-                        <td>30</td>
+                        <td>29</td>
                         <td>0</td>
-                        <td>21</td>
+                        <td>19</td>
                         <td>W</td>
-                        <td>2</td>
+                        <td>1</td>
                      </tr>
                      <tr>
                         <td>06:00 PM</td>
                         <td>Clear</td>
-                        <td>7</td>
-                        <td>4</td>
+                        <td>8</td>
+                        <td>6</td>
                         <td>0</td>
-                        <td>33</td>
+                        <td>32</td>
                         <td>0</td>
                         <td>14</td>
                         <td>W</td>
@@ -67,10 +67,10 @@
                      <tr>
                         <td>07:00 PM</td>
                         <td>Clear</td>
-                        <td>5</td>
-                        <td>2</td>
+                        <td>6</td>
+                        <td>3</td>
                         <td>0</td>
-                        <td>38</td>
+                        <td>37</td>
                         <td>0</td>
                         <td>13</td>
                         <td>W</td>
@@ -82,7 +82,7 @@
                         <td>4</td>
                         <td>1</td>
                         <td>0</td>
-                        <td>43</td>
+                        <td>41</td>
                         <td>0</td>
                         <td>11</td>
                         <td>WNW</td>
@@ -134,8 +134,8 @@
                "data":[
                  "9",
                  "9",
-                 "4",
-                 "2",
+                 "6",
+                 "3",
                  "1"
                ]
              },
@@ -147,8 +147,8 @@
                "data":[
                  "9",
                  "9",
-                 "7",
-                 "5",
+                 "8",
+                 "6",
                  "4"
                ]
              }
@@ -215,10 +215,10 @@
                "fillColor":"rgba(40,177,255,0.5)",
                "data":[
                  "29",
-                 "30",
-                 "33",
-                 "38",
-                 "43"
+                 "29",
+                 "32",
+                 "37",
+                 "41"
                ]
              },
              {
@@ -226,8 +226,8 @@
                "strokeColor":"rgba(233,37,255,1)",
                "fillColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "2",
-                 "2",
+                 "1",
+                 "1",
                  "1",
                  "2",
                  "6"
@@ -247,7 +247,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Fri Oct 26 14:05:03 2018</p>
+         Last Run: Fri Oct 26 15:05:03 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Scrimmage - Andrew Sibbald School</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Sunday Oct 28, 2018 - 10:30AM til 12:00PM</H4>
                <table class="table table-striped">
@@ -268,39 +268,39 @@
                   <tbody>
                      <tr>
                         <td>10:00 AM</td>
-                        <td>Overcast</td>
+                        <td>Mostly Cloudy</td>
                         <td>1</td>
                         <td>-2</td>
-                        <td>6</td>
+                        <td>5</td>
                         <td>65</td>
                         <td>0</td>
                         <td>11</td>
                         <td>SSE</td>
-                        <td>87</td>
+                        <td>77</td>
                      </tr>
                      <tr>
                         <td>11:00 AM</td>
                         <td>Mostly Cloudy</td>
                         <td>2</td>
                         <td>-2</td>
-                        <td>4</td>
-                        <td>58</td>
+                        <td>3</td>
+                        <td>57</td>
                         <td>1</td>
                         <td>13</td>
                         <td>SSE</td>
-                        <td>78</td>
+                        <td>75</td>
                      </tr>
                      <tr>
                         <td>12:00 PM</td>
                         <td>Mostly Cloudy</td>
                         <td>4</td>
                         <td>1</td>
-                        <td>6</td>
-                        <td>55</td>
+                        <td>4</td>
+                        <td>54</td>
                         <td>1</td>
                         <td>14</td>
                         <td>SSE</td>
-                        <td>65</td>
+                        <td>68</td>
                      </tr>
                   </tbody>
                </table>
@@ -408,9 +408,9 @@
                "strokeColor":"rgba(0,0,255,1)",
                "fillColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "6",
-                 "4",
-                 "6"
+                 "5",
+                 "3",
+                 "4"
                ]
              },
              {
@@ -419,8 +419,8 @@
                "fillColor":"rgba(40,177,255,0.5)",
                "data":[
                  "65",
-                 "58",
-                 "55"
+                 "57",
+                 "54"
                ]
              },
              {
@@ -428,9 +428,9 @@
                "strokeColor":"rgba(233,37,255,1)",
                "fillColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "87",
-                 "78",
-                 "65"
+                 "77",
+                 "75",
+                 "68"
                ]
              }
            ]
