--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Fri Oct 26 16:05:03 2018</p>
+         Last Run: Fri Oct 26 17:05:03 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Team Dinner - Watson's</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Saturday Oct 27, 2018 -  4:00PM til  8:00PM</H4>
                <table class="table table-striped">
@@ -48,7 +48,7 @@
                         <td>0</td>
                         <td>30</td>
                         <td>0</td>
-                        <td>19</td>
+                        <td>21</td>
                         <td>W</td>
                         <td>1</td>
                      </tr>
@@ -247,7 +247,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Fri Oct 26 16:05:03 2018</p>
+         Last Run: Fri Oct 26 17:05:03 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Scrimmage - Andrew Sibbald School</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Sunday Oct 28, 2018 - 10:30AM til 12:00PM</H4>
                <table class="table table-striped">
@@ -268,39 +268,39 @@
                   <tbody>
                      <tr>
                         <td>10:00 AM</td>
-                        <td>Mostly Cloudy</td>
+                        <td>Overcast</td>
                         <td>1</td>
                         <td>-2</td>
                         <td>5</td>
-                        <td>65</td>
+                        <td>64</td>
                         <td>0</td>
                         <td>11</td>
-                        <td>SSE</td>
-                        <td>78</td>
+                        <td>SE</td>
+                        <td>81</td>
                      </tr>
                      <tr>
                         <td>11:00 AM</td>
                         <td>Mostly Cloudy</td>
-                        <td>2</td>
-                        <td>-2</td>
                         <td>3</td>
-                        <td>58</td>
+                        <td>0</td>
+                        <td>3</td>
+                        <td>56</td>
                         <td>1</td>
                         <td>13</td>
                         <td>SSE</td>
-                        <td>75</td>
+                        <td>77</td>
                      </tr>
                      <tr>
                         <td>12:00 PM</td>
                         <td>Mostly Cloudy</td>
-                        <td>4</td>
-                        <td>1</td>
-                        <td>4</td>
-                        <td>54</td>
+                        <td>5</td>
+                        <td>2</td>
+                        <td>2</td>
+                        <td>50</td>
                         <td>1</td>
                         <td>14</td>
                         <td>SSE</td>
-                        <td>68</td>
+                        <td>72</td>
                      </tr>
                   </tbody>
                </table>
@@ -345,8 +345,8 @@
                "fillColor":"rgba(92,0,141,0)",
                "data":[
                  "-2",
-                 "-2",
-                 "1"
+                 "0",
+                 "2"
                ]
              },
              {
@@ -356,8 +356,8 @@
                "fillColor":"rgba(252,49,18,0)",
                "data":[
                  "1",
-                 "2",
-                 "4"
+                 "3",
+                 "5"
                ]
              }
            ]
@@ -410,7 +410,7 @@
                "data":[
                  "5",
                  "3",
-                 "4"
+                 "2"
                ]
              },
              {
@@ -418,9 +418,9 @@
                "strokeColor":"rgba(40,177,255,1)",
                "fillColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "65",
-                 "58",
-                 "54"
+                 "64",
+                 "56",
+                 "50"
                ]
              },
              {
@@ -428,9 +428,9 @@
                "strokeColor":"rgba(233,37,255,1)",
                "fillColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "78",
-                 "75",
-                 "68"
+                 "81",
+                 "77",
+                 "72"
                ]
              }
            ]
