--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Fri Oct 26 19:05:03 2018</p>
+         Last Run: Fri Oct 26 20:05:03 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Team Dinner - Watson's</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Saturday Oct 27, 2018 -  4:00PM til  8:00PM</H4>
                <table class="table table-striped">
@@ -31,8 +31,8 @@
                      <tr>
                         <td>04:00 PM</td>
                         <td>Clear</td>
-                        <td>10</td>
-                        <td>10</td>
+                        <td>9</td>
+                        <td>9</td>
                         <td>0</td>
                         <td>29</td>
                         <td>1</td>
@@ -43,10 +43,10 @@
                      <tr>
                         <td>05:00 PM</td>
                         <td>Clear</td>
-                        <td>10</td>
-                        <td>10</td>
+                        <td>9</td>
+                        <td>9</td>
                         <td>0</td>
-                        <td>29</td>
+                        <td>30</td>
                         <td>0</td>
                         <td>19</td>
                         <td>W</td>
@@ -79,14 +79,14 @@
                      <tr>
                         <td>08:00 PM</td>
                         <td>Clear</td>
-                        <td>5</td>
+                        <td>4</td>
                         <td>2</td>
                         <td>0</td>
                         <td>42</td>
                         <td>0</td>
-                        <td>11</td>
-                        <td>W</td>
-                        <td>7</td>
+                        <td>10</td>
+                        <td>WNW</td>
+                        <td>6</td>
                      </tr>
                   </tbody>
                </table>
@@ -132,8 +132,8 @@
                "pointColor":"rgba(92,0,141,1)",
                "fillColor":"rgba(92,0,141,0)",
                "data":[
-                 "10",
-                 "10",
+                 "9",
+                 "9",
                  "6",
                  "3",
                  "2"
@@ -145,11 +145,11 @@
                "pointColor":"rgba(252,49,18,1)",
                "fillColor":"rgba(252,49,18,0)",
                "data":[
-                 "10",
-                 "10",
+                 "9",
+                 "9",
                  "8",
                  "6",
-                 "5"
+                 "4"
                ]
              }
            ]
@@ -215,7 +215,7 @@
                "fillColor":"rgba(40,177,255,0.5)",
                "data":[
                  "29",
-                 "29",
+                 "30",
                  "33",
                  "37",
                  "42"
@@ -230,7 +230,7 @@
                  "0",
                  "0",
                  "2",
-                 "7"
+                 "6"
                ]
              }
            ]
@@ -247,7 +247,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Fri Oct 26 19:05:03 2018</p>
+         Last Run: Fri Oct 26 20:05:03 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Scrimmage - Andrew Sibbald School</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Sunday Oct 28, 2018 - 10:30AM til 12:00PM</H4>
                <table class="table table-striped">
@@ -268,7 +268,7 @@
                   <tbody>
                      <tr>
                         <td>10:00 AM</td>
-                        <td>Overcast</td>
+                        <td>Mostly Cloudy</td>
                         <td>1</td>
                         <td>-2</td>
                         <td>2</td>
@@ -276,19 +276,19 @@
                         <td>0</td>
                         <td>10</td>
                         <td>SE</td>
-                        <td>81</td>
+                        <td>79</td>
                      </tr>
                      <tr>
                         <td>11:00 AM</td>
                         <td>Mostly Cloudy</td>
                         <td>3</td>
                         <td>0</td>
-                        <td>2</td>
+                        <td>1</td>
                         <td>57</td>
                         <td>1</td>
                         <td>13</td>
                         <td>SSE</td>
-                        <td>75</td>
+                        <td>74</td>
                      </tr>
                      <tr>
                         <td>12:00 PM</td>
@@ -296,9 +296,9 @@
                         <td>5</td>
                         <td>2</td>
                         <td>1</td>
-                        <td>50</td>
+                        <td>54</td>
                         <td>1</td>
-                        <td>14</td>
+                        <td>13</td>
                         <td>SSE</td>
                         <td>70</td>
                      </tr>
@@ -409,7 +409,7 @@
                "fillColor":"rgba(0,0,255,0.5)",
                "data":[
                  "2",
-                 "2",
+                 "1",
                  "1"
                ]
              },
@@ -420,7 +420,7 @@
                "data":[
                  "65",
                  "57",
-                 "50"
+                 "54"
                ]
              },
              {
@@ -428,8 +428,8 @@
                "strokeColor":"rgba(233,37,255,1)",
                "fillColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "81",
-                 "75",
+                 "79",
+                 "74",
                  "70"
                ]
              }
