--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Fri Oct 26 20:05:03 2018</p>
+         Last Run: Fri Oct 26 21:05:19 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Team Dinner - Watson's</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Saturday Oct 27, 2018 -  4:00PM til  8:00PM</H4>
                <table class="table table-striped">
@@ -49,7 +49,7 @@
                         <td>30</td>
                         <td>0</td>
                         <td>19</td>
-                        <td>W</td>
+                        <td>WNW</td>
                         <td>0</td>
                      </tr>
                      <tr>
@@ -82,7 +82,7 @@
                         <td>4</td>
                         <td>2</td>
                         <td>0</td>
-                        <td>42</td>
+                        <td>43</td>
                         <td>0</td>
                         <td>10</td>
                         <td>WNW</td>
@@ -218,7 +218,7 @@
                  "30",
                  "33",
                  "37",
-                 "42"
+                 "43"
                ]
              },
              {
@@ -247,7 +247,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Fri Oct 26 20:05:03 2018</p>
+         Last Run: Fri Oct 26 21:05:19 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Scrimmage - Andrew Sibbald School</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Sunday Oct 28, 2018 - 10:30AM til 12:00PM</H4>
                <table class="table table-striped">
@@ -272,11 +272,11 @@
                         <td>1</td>
                         <td>-2</td>
                         <td>2</td>
-                        <td>65</td>
+                        <td>64</td>
                         <td>0</td>
                         <td>10</td>
                         <td>SE</td>
-                        <td>79</td>
+                        <td>78</td>
                      </tr>
                      <tr>
                         <td>11:00 AM</td>
@@ -286,9 +286,9 @@
                         <td>1</td>
                         <td>57</td>
                         <td>1</td>
-                        <td>13</td>
+                        <td>11</td>
                         <td>SSE</td>
-                        <td>74</td>
+                        <td>73</td>
                      </tr>
                      <tr>
                         <td>12:00 PM</td>
@@ -300,7 +300,7 @@
                         <td>1</td>
                         <td>13</td>
                         <td>SSE</td>
-                        <td>70</td>
+                        <td>69</td>
                      </tr>
                   </tbody>
                </table>
@@ -418,7 +418,7 @@
                "strokeColor":"rgba(40,177,255,1)",
                "fillColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "65",
+                 "64",
                  "57",
                  "54"
                ]
@@ -428,9 +428,9 @@
                "strokeColor":"rgba(233,37,255,1)",
                "fillColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "79",
-                 "74",
-                 "70"
+                 "78",
+                 "73",
+                 "69"
                ]
              }
            ]
