--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Fri Oct 26 21:05:19 2018</p>
+         Last Run: Fri Oct 26 22:05:03 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Team Dinner - Watson's</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Saturday Oct 27, 2018 -  4:00PM til  8:00PM</H4>
                <table class="table table-striped">
@@ -31,12 +31,12 @@
                      <tr>
                         <td>04:00 PM</td>
                         <td>Clear</td>
-                        <td>9</td>
-                        <td>9</td>
+                        <td>10</td>
+                        <td>10</td>
                         <td>0</td>
-                        <td>29</td>
+                        <td>28</td>
                         <td>1</td>
-                        <td>23</td>
+                        <td>21</td>
                         <td>WNW</td>
                         <td>0</td>
                      </tr>
@@ -48,7 +48,7 @@
                         <td>0</td>
                         <td>30</td>
                         <td>0</td>
-                        <td>19</td>
+                        <td>18</td>
                         <td>WNW</td>
                         <td>0</td>
                      </tr>
@@ -60,33 +60,33 @@
                         <td>0</td>
                         <td>33</td>
                         <td>0</td>
-                        <td>14</td>
-                        <td>W</td>
-                        <td>0</td>
-                     </tr>
-                     <tr>
-                        <td>07:00 PM</td>
-                        <td>Clear</td>
-                        <td>6</td>
-                        <td>3</td>
-                        <td>0</td>
-                        <td>37</td>
-                        <td>0</td>
                         <td>13</td>
                         <td>W</td>
                         <td>2</td>
                      </tr>
                      <tr>
+                        <td>07:00 PM</td>
+                        <td>Clear</td>
+                        <td>6</td>
+                        <td>4</td>
+                        <td>0</td>
+                        <td>36</td>
+                        <td>0</td>
+                        <td>11</td>
+                        <td>W</td>
+                        <td>6</td>
+                     </tr>
+                     <tr>
                         <td>08:00 PM</td>
                         <td>Clear</td>
-                        <td>4</td>
-                        <td>2</td>
+                        <td>5</td>
+                        <td>3</td>
                         <td>0</td>
-                        <td>43</td>
+                        <td>41</td>
                         <td>0</td>
                         <td>10</td>
-                        <td>WNW</td>
-                        <td>6</td>
+                        <td>W</td>
+                        <td>9</td>
                      </tr>
                   </tbody>
                </table>
@@ -132,11 +132,11 @@
                "pointColor":"rgba(92,0,141,1)",
                "fillColor":"rgba(92,0,141,0)",
                "data":[
-                 "9",
+                 "10",
                  "9",
                  "6",
-                 "3",
-                 "2"
+                 "4",
+                 "3"
                ]
              },
              {
@@ -145,11 +145,11 @@
                "pointColor":"rgba(252,49,18,1)",
                "fillColor":"rgba(252,49,18,0)",
                "data":[
-                 "9",
+                 "10",
                  "9",
                  "8",
                  "6",
-                 "4"
+                 "5"
                ]
              }
            ]
@@ -214,11 +214,11 @@
                "strokeColor":"rgba(40,177,255,1)",
                "fillColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "29",
+                 "28",
                  "30",
                  "33",
-                 "37",
-                 "43"
+                 "36",
+                 "41"
                ]
              },
              {
@@ -228,9 +228,9 @@
                "data":[
                  "0",
                  "0",
-                 "0",
                  "2",
-                 "6"
+                 "6",
+                 "9"
                ]
              }
            ]
@@ -247,7 +247,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Fri Oct 26 21:05:19 2018</p>
+         Last Run: Fri Oct 26 22:05:03 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Scrimmage - Andrew Sibbald School</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Sunday Oct 28, 2018 - 10:30AM til 12:00PM</H4>
                <table class="table table-striped">
@@ -268,35 +268,35 @@
                   <tbody>
                      <tr>
                         <td>10:00 AM</td>
-                        <td>Mostly Cloudy</td>
+                        <td>Overcast</td>
                         <td>1</td>
                         <td>-2</td>
-                        <td>2</td>
+                        <td>4</td>
                         <td>64</td>
                         <td>0</td>
                         <td>10</td>
-                        <td>SE</td>
-                        <td>78</td>
+                        <td>SSE</td>
+                        <td>81</td>
                      </tr>
                      <tr>
                         <td>11:00 AM</td>
                         <td>Mostly Cloudy</td>
                         <td>3</td>
                         <td>0</td>
-                        <td>1</td>
-                        <td>57</td>
+                        <td>4</td>
+                        <td>61</td>
                         <td>1</td>
                         <td>11</td>
                         <td>SSE</td>
-                        <td>73</td>
+                        <td>79</td>
                      </tr>
                      <tr>
                         <td>12:00 PM</td>
                         <td>Mostly Cloudy</td>
                         <td>5</td>
                         <td>2</td>
-                        <td>1</td>
-                        <td>54</td>
+                        <td>2</td>
+                        <td>57</td>
                         <td>1</td>
                         <td>13</td>
                         <td>SSE</td>
@@ -408,9 +408,9 @@
                "strokeColor":"rgba(0,0,255,1)",
                "fillColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "2",
-                 "1",
-                 "1"
+                 "4",
+                 "4",
+                 "2"
                ]
              },
              {
@@ -419,8 +419,8 @@
                "fillColor":"rgba(40,177,255,0.5)",
                "data":[
                  "64",
-                 "57",
-                 "54"
+                 "61",
+                 "57"
                ]
              },
              {
@@ -428,8 +428,8 @@
                "strokeColor":"rgba(233,37,255,1)",
                "fillColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "78",
-                 "73",
+                 "81",
+                 "79",
                  "69"
                ]
              }
