--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Fri Oct 26 23:05:03 2018</p>
+         Last Run: Sat Oct 27 00:05:22 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Team Dinner - Watson's</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Saturday Oct 27, 2018 -  4:00PM til  8:00PM</H4>
                <table class="table table-striped">
@@ -36,7 +36,7 @@
                         <td>0</td>
                         <td>28</td>
                         <td>1</td>
-                        <td>23</td>
+                        <td>21</td>
                         <td>WNW</td>
                         <td>0</td>
                      </tr>
@@ -48,8 +48,8 @@
                         <td>0</td>
                         <td>30</td>
                         <td>0</td>
-                        <td>19</td>
-                        <td>W</td>
+                        <td>18</td>
+                        <td>WNW</td>
                         <td>0</td>
                      </tr>
                      <tr>
@@ -58,9 +58,9 @@
                         <td>8</td>
                         <td>6</td>
                         <td>0</td>
-                        <td>33</td>
+                        <td>32</td>
                         <td>0</td>
-                        <td>14</td>
+                        <td>13</td>
                         <td>W</td>
                         <td>2</td>
                      </tr>
@@ -79,14 +79,14 @@
                      <tr>
                         <td>08:00 PM</td>
                         <td>Clear</td>
-                        <td>4</td>
-                        <td>2</td>
+                        <td>5</td>
+                        <td>3</td>
                         <td>0</td>
                         <td>41</td>
                         <td>0</td>
                         <td>10</td>
                         <td>W</td>
-                        <td>10</td>
+                        <td>9</td>
                      </tr>
                   </tbody>
                </table>
@@ -136,7 +136,7 @@
                  "9",
                  "6",
                  "4",
-                 "2"
+                 "3"
                ]
              },
              {
@@ -149,7 +149,7 @@
                  "9",
                  "8",
                  "6",
-                 "4"
+                 "5"
                ]
              }
            ]
@@ -216,7 +216,7 @@
                "data":[
                  "28",
                  "30",
-                 "33",
+                 "32",
                  "36",
                  "41"
                ]
@@ -230,7 +230,7 @@
                  "0",
                  "2",
                  "6",
-                 "10"
+                 "9"
                ]
              }
            ]
@@ -247,7 +247,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Fri Oct 26 23:05:03 2018</p>
+         Last Run: Sat Oct 27 00:05:22 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Scrimmage - Andrew Sibbald School</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Sunday Oct 28, 2018 - 10:30AM til 12:00PM</H4>
                <table class="table table-striped">
@@ -274,8 +274,8 @@
                         <td>4</td>
                         <td>64</td>
                         <td>0</td>
-                        <td>10</td>
-                        <td>SE</td>
+                        <td>11</td>
+                        <td>SSE</td>
                         <td>80</td>
                      </tr>
                      <tr>
@@ -284,7 +284,7 @@
                         <td>3</td>
                         <td>0</td>
                         <td>4</td>
-                        <td>61</td>
+                        <td>60</td>
                         <td>1</td>
                         <td>13</td>
                         <td>SSE</td>
@@ -300,7 +300,7 @@
                         <td>1</td>
                         <td>13</td>
                         <td>SSE</td>
-                        <td>69</td>
+                        <td>70</td>
                      </tr>
                   </tbody>
                </table>
@@ -419,7 +419,7 @@
                "fillColor":"rgba(40,177,255,0.5)",
                "data":[
                  "64",
-                 "61",
+                 "60",
                  "56"
                ]
              },
@@ -430,7 +430,7 @@
                "data":[
                  "80",
                  "78",
-                 "69"
+                 "70"
                ]
              }
            ]
